# semantic-swarm-intelligence

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  test.csv
.github/workflows/: ci.yml
configs/: dev.yaml  example_plant.yaml
docker/: Dockerfile.agent  Dockerfile.server  docker-compose.dev.yml  mosquitto.conf
models/: calibration.json
scripts/: check_bidi.py  download_datasets.py  export_aas.py  run_benchmarks.sh  train_baseline.py
src/noa_swarm/: __init__.py
src/noa_swarm/aas/: __init__.py  basyx_export.py  submodels.py
src/noa_swarm/api/: __init__.py  deps.py  main.py
src/noa_swarm/api/routes/: __init__.py  aas.py  discovery.py  federated.py  mapping.py  swarm.py
src/noa_swarm/common/: __init__.py  config.py  crypto.py  ids.py  logging.py  schemas.py
src/noa_swarm/connectors/: __init__.py  filesystem.py  mqtt.py  opcua_asyncua.py  opcua_simulator.py
src/noa_swarm/dictionaries/: __init__.py  base.py  eclass_provider.py  iec_cdd_provider.py  seed_provider.py
src/noa_swarm/federated/: __init__.py  flower_client.py  flower_server.py  strategies.py
src/noa_swarm/ml/: __init__.py
src/noa_swarm/ml/datasets/: __init__.py  cmapss.py  synth_tags.py  tep.py
src/noa_swarm/ml/models/: __init__.py  charcnn.py  fusion.py  gnn.py
src/noa_swarm/ml/serving/: __init__.py  fusion_inference.py  inference.py
src/noa_swarm/ml/training/: __init__.py  calibration.py  eval.py  train_local.py
src/noa_swarm/observability/: __init__.py  correlation.py  metrics.py  middleware.py
src/noa_swarm/services/: __init__.py  aas.py  discovery.py  federated.py  mapping.py  state.py  swarm.py
src/noa_swarm/storage/: __init__.py  base.py  memory.py  sqlalchemy.py
src/noa_swarm/swarm/: __init__.py  agent.py  consensus.py  gossip.py  membership.py  reputation.py
src/noa_swarm/ui/: __init__.py  gradio_app.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_opcua_connector.py  test_swarm.py
tests/unit/: __init__.py  test_aas_submodels.py  test_agent.py  test_api_main.py  test_api_routes.py  test_basyx_export.py  test_charcnn.py  test_consensus.py  test_datasets.py  test_dictionary_base.py  test_dp_strategies.py  test_eclass_provider.py  test_flower_client.py  test_flower_server.py  test_fusion.py  test_gnn.py  test_gossip.py  test_gradio_app.py  test_iec_cdd_provider.py  test_irdi.py  test_membership.py  test_mqtt.py  test_observability.py  test_reputation.py  test_schemas.py  test_seed_provider.py
