[tool.poetry]
name = "noa-semantic-swarm-mapper"
version = "0.1.0"
description = "Distributed industrial IoT system for semantic tag mapping using swarm intelligence"
authors = ["Aero Shariati"]
license = "MIT"
readme = "README.md"
packages = [{include = "noa_swarm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Async
asyncua = "^1.0.0"
paho-mqtt = "^2.0.0"
# Swarm
swim-protocol = "^0.6.0"
# ML
torch = "^2.2.0"
torch-geometric = "^2.4.0"
# Federated
flwr = "^1.7.0"
# AAS
basyx-python-sdk = "^1.0.0"
# Data
pandas = "^2.2.0"
numpy = "^1.26.0"
# Utilities
rich = "^13.7.0"
loguru = "^0.7.2"
httpx = "^0.26.0"
# UI
gradio = "^5.0"
huggingface-hub = "<1.0.0"
typer = "^0.21.1"
prometheus-client = "^0.24.1"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["noa_swarm"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src/noa_swarm"]

[[tool.mypy.overrides]]
module = [
    "asyncua.*",
    "paho.*",
    "swim.*",
    "torch.*",
    "torch_geometric.*",
    "flwr.*",
    "basyx.*",
    "gradio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-p",
    "no:schemathesis",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/noa_swarm"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
